--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                     <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                     <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                    <li class="menu__list__item"><a class="destaque" href="#contacto">Contacto@fulana.com</a></li>
+                    <li class="menu__list__item"><a class="destaque" href="#contacto">Contacto@brisaibarra097.com</a></li>
                 </ul>
             </nav>
         
